--- a/demos/pgv_filter_real_data.ipynb
+++ b/demos/pgv_filter_real_data.ipynb
@@ -98,11 +98,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "e506a04bc1353f269f800ccd8479f8d9dc08586bb04ce49cf4efed9fcf90820c"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.10 ('obspy')",
+   "display_name": "Python 3.10.5 ('romshake')",
    "language": "python",
    "name": "python3"
   },
@@ -116,9 +113,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.10.5"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "dca8446b4f59a327a42baa5e5f32128f1e5a65b92b06e20ec3939b92d36c4d98"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
